2005-11-25  Mike Sperber  <mike@xemacs.org>

	* packages.el (packages-find-package-hierarchies-named): Use
	`file-name-as-directory' to normalize something which may not
	have a trailing path separator.

	* package-get.el (package-get-package-index-file-location): Fix
	essentially bogus definition.

	* package-admin.el (package-admin-find-top-directory): Use the
	existing variables rather than groking the paths from scratch, and
	greatly simplify.

	* packages.el (packages-find-all-package-hierarchies): 
	Take into account `configure-early-package-hierarchies',
	`configure-late-package-hierarchies',
	`configure-last-package-hierarchies', as set by configure.

2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/chinese.el:
	* mule/chinese.el ('euc-china): Removed. Shouldn't have been
	uncommented in the first place. 

2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-cmds.el (set-language-environment-coding-systems):
	* mule/mule-cmds.el (init-locale-at-early-startup):
	Call set-current-locale (the wrapper for setlocale(3)) before
	checking the current locale, because the C code doesn't. 
	
2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/chinese.el:
	Make euc-cn available as a coding system alias for cn-gb-2312, for
	the sake of consistency with euc-jp, euc-ko and the FSF. 
	
2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* x-win-sun.el (x-win-init-sun):
	* x-win-xfree86.el (x-win-init-xfree86):
	Initialise the hardware-specific mapping from raw keycodes to the 
	US key layout. 

2005-12-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* buff-menu.el (Buffer-menu-rename): New command.
	(Buffer-menu-mode-map): Bind it to ?r.

2005-12-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.24 "dandelion" is released.

2005-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-cmds.el (set-language-environment-coding-systems):
	Initialise keyboard-coding-system, terminal-coding-system when