@@ -1,3 +1,9 @@
+2005-12-30  Mike Sperber  <mike@xemacs.org>
+
+	* packages.el (packages-find-all-package-hierarchies): Interpret
+	EMACSPACKAGEPATH as listing package direcories, not hierarchies.
+	This fixes a regression introduced in the change on 2005-01-08.
+
 2005-11-25  Mike Sperber  <mike@xemacs.org>
 
 	* packages.el (packages-find-package-hierarchies-named): Use
